Fix gapping, only popular destinations has 100px gap.

--- a/src/sass/_global.scss
+++ b/src/sass/_global.scss
@@ -35,7 +35,6 @@ section {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 100px;
 }
 
 .location-icon {
